--- a/car-clone/src/NavsAndFooter/NavBar.css
+++ b/car-clone/src/NavsAndFooter/NavBar.css
@@ -22,13 +22,75 @@
     left: 0;
     z-index: 2;
     margin-top: 83px;
-    transition: all .3s ease;
+    transition: all .5s ease;
+    overflow: auto;
+    display: flex;
+    align-items: flex-start;
 
+}
+
+.dropdown-nav {
+    width: 28%;
+    height: auto;
+
+}
+
+.dropdown-nav div a {
+    height: 58px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.dropdown-nav div a svg {
+    fill: white;
+    height: 58px;
+    width: auto;
+    max-width: 240px;
+    margin-bottom: 30px;
+}
+
+.dropdown-nav div a:hover svg {
+    fill: #d5001c;
+    cursor: pointer;
+}
+
+.dropdown-nav div {
+    height: 96px;
+    line-height: 16px;
+    padding-left: 140px;
+    color: white;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.dropdown-nav div::after {
+    background: linear-gradient(to right, rgba(102,102,102,0) 0%, rgba(102,102,102,1) 100% );
+    height: 3px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+}
+
+.dropdown-nav div:first-of-type  {
+    color: white;
+    font-size: 21px;
+}
+
+.dropdown-nav div:first-of-type:hover {
+    color: #d5001c;
+    cursor: pointer;
 }
 
 .opened {
     top: 0;
-    transition: all .3s ease;
+    transition: all .5s ease;
 }
 
 .nav-section-edge {
@@ -113,19 +175,19 @@
 .top-burger-animate {
     transform-origin: 0%;
     transform: rotate(45deg);
-    transition: all .3s ease;
+    transition: all .5s ease;
     margin-bottom: 6px;
 }
 
 .middle-burger-animate {
-    transition: all .3s ease-out;
+    transition: all .5s ease-out;
     display: none;
 }
 
 .bottom-burger-animate {
     transform-origin: 0%;
     transform: rotate(-45deg);
-    transition: all .3s ease;
+    transition: all .5s ease;
     margin-top: 6px;
 }
 
