--- a/car-clone/src/NavsAndFooter/NavBar.css
+++ b/car-clone/src/NavsAndFooter/NavBar.css
@@ -29,6 +29,7 @@
 
 }
 
+
 .dropdown-nav {
     width: 28%;
     height: auto;
@@ -88,9 +89,155 @@
     cursor: pointer;
 }
 
+.dropdown-cars-contain {
+    width: 67%;
+    height:auto;
+    top: 50px;
+    right:0px;
+    position: absolute;
+}
+
+.dropdown-cars-contain h2 {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    font-size: 22px;
+    font-weight: 400;
+    letter-spacing: .5px;
+    position: relative;
+    width: 25%;
+    margin-right: 150px;
+    top: 50px;
+    margin-left: auto;
+}
+
+.dropdown-cars-contain h2 span {
+    text-align: left;
+    /* margin-right: 35px;
+    margin-left: auto; */
+}
+
+.nine-carrera .car-image {
+    height: 72px;
+    width: 245px;
+    background-size: contain;
+    background-image: url('../assets/911\ Carrera.png');
+    
+}
+
+.nine-carrera .gradient-border{
+    background: linear-gradient(to right, rgba(102,102,102,0) 0%, rgba(102,102,102,1) 100% );
+    height: 3px;
+    width: 285px;
+    position: absolute;
+    top: 74;
+    left: -45px;
+    content: '';
+}
+
+.nine-carrera {
+    left: 20px;
+    position: absolute;
+}
+
+.nine-t .car-image{
+    height: 72px;
+    width: 245px;
+    background-size: contain;
+    background-image: url('../assets/911\ T.png')
+}
+
+.nine-t {
+    position: absolute;
+    left: 150px;
+    top: 120px;
+}
+
+.nine-gts .gradient-border{
+    background: linear-gradient(to right, rgba(102,102,102,0) 0%, rgba(102,102,102,1) 100% );
+    height: 3px;
+    width: 285px;
+    position: absolute;
+    top: 74;
+    left: -45px;
+    content: '';
+}
+.nine-gts .car-image{
+    height: 72px;
+    width: 245px;
+    background-size: contain;
+    background-image: url('../assets/911\ GTS.png')
+}
+
+.nine-gts {
+    position: absolute;
+    left: 280px;
+    top: 240px;
+}
+
+.nine-turbo .gradient-border{
+    background: linear-gradient(to right, rgba(102,102,102,0) 0%, rgba(102,102,102,1) 100% );
+    height: 3px;
+    width: 285px;
+    position: absolute;
+    top: 74;
+    left: -45px;
+    content: '';
+}
+.nine-turbo .car-image{
+    height: 72px;
+    width: 245px;
+    background-size: contain;
+    background-image: url('../assets/911\ Turbo.png')
+}
+
+.nine-turbo {
+    position: absolute;
+    left: 410px;
+    top: 360px;
+}
+
+.nine-t .gradient-border{
+    background: linear-gradient(to right, rgba(102,102,102,0) 0%, rgba(102,102,102,1) 100% );
+    height: 3px;
+    width: 285px;
+    position: absolute;
+    top: 74;
+    left: -45px;
+    content: '';
+}
+
+.dropdown-car-name svg{
+    height: 11px;
+    width: auto;
+    max-width: 20px;
+    margin-right: 2px;
+}
+
+.dropdown-car-name p {
+    color: #f2f2f2;
+    font-size: 15px;
+    font-weight: 200;
+}
+
+.dropdown-car-name {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: flex-end;
+    margin-top: -10px;
+    margin-right: 8px;
+}
+
+.car-section {
+    position: relative;
+    width: 245px;
+}
+
 .opened {
     top: 0;
     transition: all .5s ease;
+
 }
 
 .nav-section-edge {
